# AI-Tutor

./: .gitignore  README.md  app.py  memory_module.py  perception_module.py  pyproject.toml  rag_backend.py
faiss_index/: doc_index_cache.json  metadata.json
